feat: add recruitment pipeline
